--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
                 <div class="main__desc">
                     <span class="main__span">Welcome</span>
-                    <!-- SH -->
+                    <!-- SHU QISMI ISHLAMIYAPTI responsiveda -->
                     <h1 class="main__title ttl">
                         <span class="ttl__span">I am a</span>
                         <div class="message">
@@ -187,103 +187,157 @@
                         <p class="about__big-title">portfolio</p>
                         <h2 class="portfolio__title about__title">My Work</h2>
                         <ul class="portfolio__list row">
-                            <li class="portfolio__item col-md-4 col-sm-6 col-xs-12">
-                                <div class="portfolio__hover">
-                                    <a class="portfolio__link" href="#">
+                            <li class="portfolio__item col-lg-4 col-sm-6 col-xs-12">
+                                <div class="portfolio__hover" id="portContent">
                                     <div class="portfolio__img"></div>
                                     <div class="portfolio__colors"></div>
                                     <div class="portfolio__links-box">
-                                        <a class="portfolio__icon" href="https://app.netlify.com/teams/xushnora/overview">
+                                        <a class="portfolio__icon"
+                                            href="https://app.netlify.com/teams/xushnora/overview">
                                             <i class='bx bxl-netlify mini-link'></i>
                                         </a>
                                         <a class="portfolio__icon" href="https://github.com/Xushnora">
                                             <i class='bx bxl-github mini-link'></i>
                                         </a>
                                     </div>
-                                </a>
                                 </div>
                             </li>
-                            <li class="portfolio__item col-md-4 col-sm-6 col-xs-12">
+                            <li class="portfolio__item col-lg-4 col-sm-6 col-xs-12">
                                 <div class="portfolio__hover">
-                                    <a class="portfolio__link" href="#">
                                     <div class="portfolio__img"></div>
                                     <div class="portfolio__colors"></div>
                                     <div class="portfolio__links-box">
-                                        <a class="portfolio__icon" href="https://app.netlify.com/teams/xushnora/overview">
+                                        <a class="portfolio__icon"
+                                            href="https://app.netlify.com/teams/xushnora/overview">
                                             <i class='bx bxl-netlify mini-link'></i>
                                         </a>
                                         <a class="portfolio__icon" href="https://github.com/Xushnora">
                                             <i class='bx bxl-github mini-link'></i>
                                         </a>
                                     </div>
-                                </a>
                                 </div>
                             </li>
-                            <li class="portfolio__item col-md-4 col-sm-6 col-xs-12">
+                            <li class="portfolio__item col-lg-4 col-sm-6 col-xs-12">
                                 <div class="portfolio__hover">
-                                    <a class="portfolio__link" href="#">
                                     <div class="portfolio__img"></div>
                                     <div class="portfolio__colors"></div>
                                     <div class="portfolio__links-box">
-                                        <a class="portfolio__icon" href="https://app.netlify.com/teams/xushnora/overview">
+                                        <a class="portfolio__icon"
+                                            href="https://app.netlify.com/teams/xushnora/overview">
                                             <i class='bx bxl-netlify mini-link'></i>
                                         </a>
                                         <a class="portfolio__icon" href="https://github.com/Xushnora">
                                             <i class='bx bxl-github mini-link'></i>
                                         </a>
                                     </div>
-                                </a>
                                 </div>
                             </li>
-                            <li class="portfolio__item col-md-4 col-sm-6 col-xs-12">
+                            <li class="portfolio__item col-lg-4 col-sm-6 col-xs-12">
                                 <div class="portfolio__hover">
-                                    <a class="portfolio__link" href="#">
                                     <div class="portfolio__img"></div>
                                     <div class="portfolio__colors"></div>
                                     <div class="portfolio__links-box">
-                                        <a class="portfolio__icon" href="https://app.netlify.com/teams/xushnora/overview">
+                                        <a class="portfolio__icon"
+                                            href="https://app.netlify.com/teams/xushnora/overview">
                                             <i class='bx bxl-netlify mini-link'></i>
                                         </a>
                                         <a class="portfolio__icon" href="https://github.com/Xushnora">
                                             <i class='bx bxl-github mini-link'></i>
                                         </a>
                                     </div>
-                                </a>
                                 </div>
                             </li>
-                            <li class="portfolio__item col-md-4 col-sm-6 col-xs-12">
+                            <li class="portfolio__item col-lg-4 col-sm-6 col-xs-12">
                                 <div class="portfolio__hover">
-                                    <a class="portfolio__link" href="#">
                                     <div class="portfolio__img"></div>
                                     <div class="portfolio__colors"></div>
                                     <div class="portfolio__links-box">
-                                        <a class="portfolio__icon" href="https://app.netlify.com/teams/xushnora/overview">
+                                        <a class="portfolio__icon"
+                                            href="https://app.netlify.com/teams/xushnora/overview">
                                             <i class='bx bxl-netlify mini-link'></i>
                                         </a>
                                         <a class="portfolio__icon" href="https://github.com/Xushnora">
                                             <i class='bx bxl-github mini-link'></i>
                                         </a>
                                     </div>
-                                </a>
                                 </div>
                             </li>
-                             <li class="portfolio__item col-md-4 col-sm-6 col-xs-12">
+                            <li class="portfolio__item col-lg-4 col-sm-6 col-xs-12">
                                 <div class="portfolio__hover">
-                                    <a class="portfolio__link" href="#">
                                     <div class="portfolio__img"></div>
                                     <div class="portfolio__colors"></div>
                                     <div class="portfolio__links-box">
-                                        <a class="portfolio__icon" href="https://app.netlify.com/teams/xushnora/overview">
+                                        <a class="portfolio__icon"
+                                            href="https://app.netlify.com/teams/xushnora/overview">
                                             <i class='bx bxl-netlify mini-link'></i>
                                         </a>
                                         <a class="portfolio__icon" href="https://github.com/Xushnora">
                                             <i class='bx bxl-github mini-link'></i>
                                         </a>
                                     </div>
-                                </a>
                                 </div>
                             </li>
                         </ul>
+                    </div>
+                    <div class="about__modal coffe" id="cofeeModal">
+                        <div class="coffe__page">
+                            <button id="closeBtncofe" class="cofee__btn"><i class="bx bx-x close-bx"></i></button>
+                            <h2 class="coffe__title">Project title 1</h2>
+                            <div class="coffe__boxs row">
+                                <div class="col-sm-6 coffe__col img-col">
+                                    <div class="coffe__imgbox">
+                                        <img class="coffe__img" src="./imgs/project-1.jpg" alt="portfolio">
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 coffe__col">
+                                    <div class="coffe__decs cofdesc">
+                                        <h3 class="cofdesc__title">Project info:</h3>
+                                        <p class="cofdesc__text">Quidam lisque persius interesset his et, in quot quidam
+                                            persequeris vim, ad mea essent possim iriure. Lisque persius interesset his
+                                            et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
+                                        <h3 class="cofdesc__title">Project Details:</h3>
+                                        <ul class="coffe__list">
+                                            <li class="coffe__item">
+                                                <span class="coffe__span">Technologies:</span>
+                                                <p class="coffe__lg">HTML5, CSS3, Js</p>
+                                            </li>
+                                            <li class="coffe__item">
+                                                <span class="coffe__span">Industry:</span>
+                                                <p class="coffe__lg">Web sayt</p>
+                                            </li>
+                                            <li class="coffe__item">
+                                                <span class="coffe__span">Date:</span>
+                                                <p class="coffe__lg">February 5, 2022</p>
+                                            </li>
+                                            <li class="coffe__item">
+                                                <span class="coffe__span">URL:</span><a href="#">www.example.com</a>
+                                            </li>
+                                            <li class="coffe__item">
+                                                <span class="coffe__span">Share:</span>
+                                                <ul class="coffe__media-list share">
+                                                    <li class="share__item">
+                                                        <a class="share__link" href="#"><i
+                                                                class='bx bxl-facebook share__bx'></i></a>
+                                                    </li>
+                                                    <li class="share__item">
+                                                        <a class="share__link" href="#"><i
+                                                                class='bx bxl-linkedin share__bx'></i></a>
+                                                    </li>
+                                                    <li class="share__item">
+                                                        <a class="share__link" href="#"><i
+                                                                class='bx bxl-instagram-alt share__bx'></i></a>
+                                                    </li>
+                                                    <li class="share__item">
+                                                        <a class="share__link" href="#"><i
+                                                                class='bx bxl-telegram share__bx'></i></a>
+                                                    </li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div id="contact" class="contact">
@@ -298,7 +352,8 @@
                                         <p class="adress__text">4th Floor, Plot No.22, <br>
                                             145 Murphy Canyon Rd. <br>
                                             San Diego CA 2028</p>
-                                        <a class="adress__tel" href="tel:998338701201"><i class='bx bxs-phone bx-rotate-270'></i> (998) 870
+                                        <a class="adress__tel" href="tel:998338701201"><i
+                                                class='bx bxs-phone bx-rotate-270'></i> (998) 870
                                             12 01</a>
                                         <a class="adress__tel" href="xushnoranishonova@gmail.com"><i
                                                 class='bx bx-mail-send'></i>xushnoranishonova@gmail.com</a>
@@ -307,29 +362,32 @@
                                         <h3 class="follow__title">Follow me</h3>
                                         <ul class="follow__list">
                                             <li class="follow__item">
-                                                <a class="follow__link" href="https://facebook.com/xushnora.nishonova.1/"
-                                                    target="_blank">
-                                                    <i class='bx bxl-facebook follow-bx'></i>
+                                                <a class="follow__link"
+                                                    href="https://facebook.com/xushnora.nishonova.1/" target="_blank">
+                                                    <i class='bx bxl-facebook follow__bx'></i>
                                                 </a>
                                             </li>
                                             <li class="follow__item">
-                                                <a class="follow__link" href="https://instagram.com/xushnora_uz/" target="_blank">
-                                                    <i class='bx bxl-instagram-alt follow-bx' ></i>
+                                                <a class="follow__link" href="https://instagram.com/xushnora_uz/"
+                                                    target="_blank">
+                                                    <i class='bx bxl-instagram-alt follow__bx'></i>
                                                 </a>
                                             </li>
                                             <li class="follow__item">
                                                 <a class="follow__link" href="https://t.me/Xushnora_uz" target="_blank">
-                                                    <i class='bx bxl-telegram follow-bx'></i>
+                                                    <i class='bx bxl-telegram follow__bx'></i>
                                                 </a>
                                             </li>
                                             <li class="follow__item">
-                                                <a class="follow__link" href="https://linkedin.com/feed/" target="_blank">
-                                                    <i class='bx bxl-linkedin follow-bx'></i>
+                                                <a class="follow__link" href="https://linkedin.com/feed/"
+                                                    target="_blank">
+                                                    <i class='bx bxl-linkedin follow__bx'></i>
                                                 </a>
                                             </li>
                                             <li class="follow__item">
-                                                <a class="follow__link" href="https://github.com/Xushnora" target="_blank">
-                                                    <i class='bx bxl-github follow-bx'></i>
+                                                <a class="follow__link" href="https://github.com/Xushnora"
+                                                    target="_blank">
+                                                    <i class='bx bxl-github follow__bx'></i>
                                                 </a>
                                             </li>
                                         </ul>
@@ -339,10 +397,13 @@
                                     <form class="form__page">
                                         <h3 class="form__title">SEND US A NOTE</h3>
                                         <div class="form__input-box">
-                                            <input class="form__input" type="text" name="name" id="name" placeholder="Name" required>
-                                            <input class="form__input" type="email" name="email" id="email" placeholder="Email" required>
+                                            <input class="form__input" type="text" name="name" id="name"
+                                                placeholder="Name" required>
+                                            <input class="form__input" type="email" name="email" id="email"
+                                                placeholder="Email" required>
                                         </div>
-                                        <textarea class="form__area" name="taxt" id="text" cols="30" rows="5" placeholder="Tell us more about your needs ..." required></textarea>
+                                        <textarea class="form__area" name="taxt" id="text" cols="30" rows="5"
+                                            placeholder="Tell us more about your needs ..." required></textarea>
                                         <button class="form__btn" type="submit">Send massage</button>
                                     </form>
                                 </div>
@@ -355,8 +416,10 @@
                 <a class="go-link" href="#"><i class='bx bx-chevrons-up'></i>
                     <i class='bx bx-chevrons-up'></i></a>
             </div>
+
         </div>
     </section>
+
 
     <script src="js/main.js"></script>
 
