--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                             <div class="coffe__boxs row">
                                 <div class="col-sm-6 coffe__col img-col">
                                     <div class="coffe__imgbox">
-                                        <img class="coffe__img" src="./imgs/project-1.jpg" alt="portfolio">
+                                        <img class="coffe__img" src="./imgs/screencapture-coffee-proect-netlify-app-2022-02-14-13_02_37.jpg" alt="portfolio">
                                     </div>
                                 </div>
                                 <div class="col-sm-6 coffe__col">
